--- a/TravelB/src/main/resources/templates/memberCentre.html
+++ b/TravelB/src/main/resources/templates/memberCentre.html
@@ -7,15 +7,23 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    <!-- meta_tags-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="keywords"
+        content="Library Membership form A Flat Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements" />
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
-        function hideURLbar(){ window.scrollTo(0,1); } </script>
+	function hideURLbar(){ window.scrollTo(0,1); } </script>
+    <!-- Meta_tag_Keywords-->
+
     <!--css_files-->
     <link rel="stylesheet" href="css/jquery-ui.css" />
-    <link href="css/style2.css" rel="stylesheet" type="text/css" media="all" /><!--stylesheet-->
+    <link href="css/style2.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/font-awesome.css"><!--font_wesome_icons-->
     <link href="//fonts.googleapis.com/css?family=PT+Sans+Caption" rel="stylesheet"><!--online_fonts-->
     <link href="//fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet"><!--online_fonts-->
     <!--//css_files-->
+
     <!-- Favicon -->
     <link th:href="@{/img/favicon.ico}" rel="icon">
 
@@ -41,7 +49,7 @@
     <!-- Template Stylesheet -->
     <link th:href="@{/css/style.css}" rel="stylesheet">
 
-    <link rel="stylesheet" th:href="@{/css/login.css}">
+    <link rel="stylesheet" th:href="@{/css/register.css}">
     <style>
 
     </style>
@@ -100,8 +108,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a th:href="@{'/index'}" class="nav-item nav-link">首頁</a>
-                    <a th:href="@{'/find'}" class="nav-item nav-link">商品資訊</a>
+                    <a href="index" class="nav-item nav-link">Home</a>
+                    <a href="about" class="nav-item nav-link">About</a>
                     <a href="service" class="nav-item nav-link">Services</a>
                     <a href="package" class="nav-item nav-link">Packages</a>
                     <div class="nav-item dropdown">
@@ -115,11 +123,12 @@
                         </div>
                     </div>
                     <a onclick="" href="contact" class="nav-item nav-link">Contact</a>
-                    <a href="register" class="nav-item nav-link">註冊</a>
+                    <a href="register" class="nav-item nav-link active">註冊</a>
                 </div>
-                <a href="login" class="btn btn-primary rounded-pill py-2 px-4 active">登入</a>
+                <a href="login" class="btn btn-primary rounded-pill py-2 px-4">登入</a>
             </div>
         </nav>
+
         <!-- --------------------------------------------------------- -->
         <div class="container-fluid bg-primary py-5 mb-5 hero-header">
             <div class="container py-5">
@@ -143,25 +152,26 @@
                                     <label class="text">姓名</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-user" aria-hidden="true"></i>
-                                        <input type="text" id="name" name="name" th:value="${session.loginEmail.name}" placeholder="請輸入" />
+                                        <input type="text" id="name" name="name" th:value="${session.loginEmail.name}"
+                                            placeholder="請輸入" />
                                     </div>
                                 </div>
                                 <!-- <div class="w3l-grid2">
-                                        <label class="text">Last name</label>
-                                        <div class="w3l-div">
-                                            <i class="fa fa-user" aria-hidden="true"></i>
-                                            <input type="text" name="name" placeholder="last name" required="" />
-                                        </div>
-                                    </div> -->
+                                    <label class="text">Last name</label>
+                                    <div class="w3l-div">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                        <input type="text" name="name" placeholder="last name" required="" />
+                                    </div>
+                                </div> -->
                                 <div class="clear"></div>
                             </div>
                             <div class="w3l-last-grid1">
                                 <div class="w3l-grid1">
-                                    <label class="text">性別</label>
+                                    <label class="text" th:value="${session.loginEmail.gender}">性別</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-users" aria-hidden="true"></i>
-                                        <select id="gender" class="form-control" required="" name="gender" th:value="${session.loginEmail.gender}">
-                                            <option>性別</option>
+                                        <select id="gender" class="form-control" name="gender">
+
                                             <option>男性</option>
                                             <option>女性</option>
                                         </select>
@@ -171,8 +181,9 @@
                                     <label class="text">生日</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-calendar" aria-hidden="true"></i>
-                                        <input type="text" id="birthday" name="birthday" placeholder="yyyy-MM-dd" min="1900-01-01"
-                                            required pattern="\d{4}-\d{2}-\d{2}" th:value="${session.loginEmail.birthday}"  />
+                                        <input type="text" id="birthday" name="birthday" placeholder="yyyy-MM-dd"
+                                            min="1900-01-01" required pattern="\d{4}-\d{2}-\d{2}"
+                                            th:value="${session.loginEmail.birthday}" />
                                         <!-- id="datepicker"  -->
                                     </div>
                                 </div>
@@ -183,14 +194,16 @@
                                     <label class="text">電子信箱</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                                        <input type="email" id="email" name="email" th:value="${session.loginEmail.email}" required="" />
+                                        <input type="email" id="email" name="email"
+                                            th:value="${session.loginEmail.email}" />
                                     </div>
                                 </div>
                                 <div class="w3l-grid2">
                                     <label class="text">電話號碼</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-phone" aria-hidden="true"></i>
-                                        <input type="text" id="phone" name="phone" placeholder="電話請輸入" th:value="${session.loginEmail.phone}" required="" />
+                                        <input type="text" id="phone" name="phone" placeholder="電話請輸入"
+                                            th:value="${session.loginEmail.phone}" />
                                     </div>
                                 </div>
                                 <div class="clear"></div>
@@ -200,64 +213,66 @@
                                     <label class="text">地址</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-location-arrow" aria-hidden="true"></i>
-                                        <input type="text" id="address" name="address" placeholder="地址請輸入" th:value="${session.loginEmail.address}" required="" />
+                                        <input type="text" id="address" name="address" placeholder="地址請輸入"
+                                            th:value="${session.loginEmail.address}" />
                                     </div>
                                 </div>
                                 <div class="w3l-grid2">
                                     <label class="text">城市</label>
                                     <div class="w3l-div">
                                         <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                        <input type="text" id="city" name="city" placeholder="城市請輸入" required="" />
+                                        <input type="text" id="city" name="city" placeholder="城市請輸入"
+                                            th:value="${session.loginEmail.city}" />
                                     </div>
                                 </div>
                                 <div class="clear"></div>
                             </div>
 
                             <!-- <div class="w3l-right-grid1">
-                                    <div class="w3l-grid1">
-                                        <label class="text">state</label>
-                                        <div class="w3l-div">
-                                            <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                            <input type="text" name="state" placeholder="state/province" required="" />
-                                        </div>
+                                <div class="w3l-grid1">
+                                    <label class="text">state</label>
+                                    <div class="w3l-div">
+                                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                        <input type="text" name="state" placeholder="state/province" required="" />
                                     </div>
-                                    <div class="w3l-grid2">
-                                        <label class="text">zipcode</label>
-                                        <div class="w3l-div">
-                                            <i class="fa fa-address-card-o" aria-hidden="true"></i>
-                                            <input type="text" name="zipcode" placeholder="postal" required="" />
-                                        </div>
+                                </div>
+                                <div class="w3l-grid2">
+                                    <label class="text">zipcode</label>
+                                    <div class="w3l-div">
+                                        <i class="fa fa-address-card-o" aria-hidden="true"></i>
+                                        <input type="text" name="zipcode" placeholder="postal" required="" />
                                     </div>
-                                    <div class="clear"></div>
-                                </div> -->
+                                </div>
+                                <div class="clear"></div>
+                            </div> -->
 
                             <!-- <div class="w3l-right-grid1">
-                                    <div class="w3l-grid1">
-                                        <label class="text">takes member ship <span>?</span></label>
-                                        <div class="w3l-div">
-                                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                            <select class="form-contro3" required="">
-                                                <option>membership</option>
-                                                <option>yearly</option>
-                                                <option>quarterly</option>
-                                                <option>weakly</option>
-                                                <option>never</option>
-                                            </select>
-                                        </div>
+                                <div class="w3l-grid1">
+                                    <label class="text">takes member ship <span>?</span></label>
+                                    <div class="w3l-div">
+                                        <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                                        <select class="form-contro3" required="">
+                                            <option>membership</option>
+                                            <option>yearly</option>
+                                            <option>quarterly</option>
+                                            <option>weakly</option>
+                                            <option>never</option>
+                                        </select>
                                     </div>
-                                    <label class="text">which type of books</label>
-                                    <div class="w3l-grid2">
-                                        <div class="w3l-div">
-                                            <i class="fa fa-book" aria-hidden="true"></i>
-                                            <select class="form-contro2" required="">
-                                                <option>select books</option>
-                                                <option>history</option>
-                                                <option>science</option>
-                                                <option>social</option>
-                                                <option>mathematics</option>
-                                            </select>
-                                        </div>
-                                    </div> -->
+                                </div>
+                                <label class="text">which type of books</label>
+                                <div class="w3l-grid2">
+                                    <div class="w3l-div">
+                                        <i class="fa fa-book" aria-hidden="true"></i>
+                                        <select class="form-contro2" required="">
+                                            <option>select books</option>
+                                            <option>history</option>
+                                            <option>science</option>
+                                            <option>social</option>
+                                            <option>mathematics</option>
+                                        </select>
+                                    </div>
+                                </div> -->
                     </div>
                     </form>
                     <div class="clear"></div>
@@ -366,21 +381,21 @@
 
         function upMember() {
             const data = {
-                    name: document.getElementById('name').value,
-                    gender: document.getElementById('gender').value,
-                    birthday: document.getElementById('birthday').value,
-                    email: document.getElementById('email').value,
-                    phone: document.getElementById('phone').value,
-                    address: document.getElementById('address').value,
-                    city: document.getElementById('city').value
+                name: document.getElementById('name').value,
+                gender: document.getElementById('gender').value,
+                birthday: document.getElementById('birthday').value,
+                email: document.getElementById('email').value,
+                phone: document.getElementById('phone').value,
+                address: document.getElementById('address').value,
+                city: document.getElementById('city').value
             };
             $.ajax({
                 type: "PUT",
                 url: "http://localhost:8080/travel/memberCentre",
 
                 data: JSON.stringify(data),
-                dataType:"json", 
-                contentType:"application/json;charset:UTF-8",
+                dataType: "json",
+                contentType: "application/json;charset:UTF-8",
                 success: () => {
                     console.log("OK");
                 },
